--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,12 @@
+
+/*ADDING BACKGROUND/PADDING TO EVERYTHING TO GET GENERAL SHAPE*/
 body{
     background-color: #009688;
     font-family: sans-serif;   
     margin: 0;
     padding: 20px
 }
+/*ADDED BORDER BOX*/
 *{
     box-sizing: border-box;
 }
@@ -15,7 +18,8 @@ body{
     max-height: 500px;
     max-width: 700px;
     padding: 30px;
-}
+} 
+
 .question-number,
 .question,
 .options,
@@ -23,17 +27,20 @@ body{
 .answer-tracker{
 
 }
+/*ADDING IN STYLES FOR QUESTION HEADER*/
 .question-number h3{
     border-bottom: 1px solid #ccc;
     color: #009688;
     margin: 0;
     padding-bottom: 10px;
 }
+/*ADDING IN STYLES FOR QUESTIONS*/
 .question{
     color: #000000;
     font-size: 22px;
     padding: 15px 0;
 }
+/*ADDING IN STYLES FOR ANSWER OPTIONS*/
 .options div{
     background-color: #cccccc;
     font-size: 16px;
@@ -44,6 +51,9 @@ body{
     position: relative;
     overflow: hidden;
 }
+
+
+/*ADDED ANIMATION TO CORRECT ANSWERS*/
 .options div.correct{
     color: #fff;
     z-index: 1;
@@ -70,7 +80,7 @@ body{
 }
 
 
-
+/*ADDED ANIMATION TO INCORRECT ANSWERS*/
 .options div.incorrect{
     color: #fff;
     z-index: 1;
@@ -95,7 +105,15 @@ body{
         transform: translateX(0%)
     }
 }
-
+/*ADDING IN BUTTON STYLES FOR SHAPE AND SIZE*/
 .button .btn{
-    padding:10px 30px;
+    background-color: #009688;
+    border: none;
+    border-radius: 5px;
+    color: #ffffff;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 18px;
+    margin: 15px;
+    padding:12px 50px;
 }
