--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,7 @@ body{
 .quiz-container{
     background-color: #ffffff;
     border-radius: 10px;
-    margin: auto;
+    margin: 40px auto;
     max-height: 500px;
     max-width: 700px;
     padding: 30px;
@@ -38,13 +38,14 @@ body{
 .question{
     color: #000000;
     font-size: 22px;
-    padding: 15px 0;
+    padding: 20px 0;
 }
 /*ADDING IN STYLES FOR ANSWER OPTIONS*/
 .options div{
     background-color: #cccccc;
     font-size: 16px;
     color: 000000;
+    cursor: pointer;
     margin-bottom: 10px;
     padding:15px;
     border-radius: 5px;
@@ -113,7 +114,7 @@ body{
     color: #ffffff;
     cursor: pointer;
     display: inline-block;
-    font-size: 18px;
-    margin: 15px;
-    padding:12px 50px;
+    font-size: 20px;
+    margin: 15px 0;
+    padding:15px 50px;
 }
