--- a/assets/style.css
+++ b/assets/style.css
@@ -20,13 +20,6 @@ body{
     padding: 30px;
 } 
 
-.question-number,
-.question,
-.options,
-.button,
-.answer-tracker{
-
-}
 /*ADDING IN STYLES FOR QUESTION HEADER*/
 .question-number h3{
     border-bottom: 1px solid #ccc;
@@ -51,6 +44,10 @@ body{
     border-radius: 5px;
     position: relative;
     overflow: hidden;
+}
+
+.options div.disabled{
+    pointer-events: none;
 }
 
 
@@ -117,4 +114,43 @@ body{
     font-size: 20px;
     margin: 15px 0;
     padding:15px 50px;
+}
+
+.quiz-complete{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0,0, 0.9);
+    z-index: 10;
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+.quiz-complete .show{
+    display: flex;
+}
+
+.quiz-complete .box{
+    background-color: #009688;
+    padding: 30px;
+    border-radius: 10px;
+    text-align: center;
+    max-width: 700px;
+    flex-basis: 700px;
+    color: #ffffff;
+}
+.quiz-complete .box h1{
+    font-size: 36px;
+    margin:0 0 20px;
+}
+.quiz-complete .box button{
+    padding: 15px 50px;
+    border: none;
+    background-color: silver;
+    border-radius: 5px;
+    font-size: 16px;
+    margin: 15px 0 20px;
+    color: #ffffff;
 }
